Use more icons on the home page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@ projects:
     <p>If you’re building a web site or application, I can help you bridge the gap between design &amp; engineering–and see your project through from <a href="#services">idea to production</a>.</p>
   </div>
 
-  <div class="container" id="projects">
+
+  <div class="container icons">
+    <img src="/images/icons/nounproject/lastspark/lighthouse.svg" width="100" height="100" alt="" />
+    <!--
+    <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/navigation.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/island.svg" width="100" height="100" alt="" />
+    -->
     <h1>Example projects</h1>
   </div>
   
@@ -90,14 +97,18 @@ projects:
     </li>
     {% endfor %}
   </ul>
-  
-  
-  
 
-  <div class="container" id="services">
+
+  <div class="container icons" id="services">
+    <!--
+    <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/island.svg" width="100" height="100" alt="" />
+    -->
+    <img src="/images/icons/nounproject/lastspark/navigation.svg" width="100" height="100" alt="" />
     <h1>Services</h1>
   
-    <ul class="services">
+    <ul class="services" style="text-align: left;">
       <li>
         <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
         <h2>Prototypes</h2>
@@ -121,7 +132,7 @@ projects:
         <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
-        <img src="/images/icons/nounproject/lastspark/ship.svg" width="100" height="100" alt="" />
+        <img src="/images/icons/nounproject/lastspark/ship-forward.svg" width="100" height="100" alt="" />
         <h2>Production</h2>
         <p>Low-maintenance, static web sites and applications, served with high availability, performance and security, along with any tools and services you need to run a successful project. <a href="https://tobbi.co/la2050/" aria-label="case study for a static web site">Read a case study</a></p>
       </li>
@@ -133,25 +144,36 @@ projects:
 
     -->
   </div>
-  
-  
-  <div class="container">
-    <h1>I love helping teams with a mission like…</h1>
 
+
+  <div class="container mission icons">
+    <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
+    <!--
+    <img src="/images/icons/nounproject/lastspark/island.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
+    -->
+    <h1>Do you have a mission?</h1>
+    <h2>Here are some ideas I’m especially eager to help with…</h2>
     <ul>
-      <li>Keeping the Web open, accessible, and protecting privacy</li>
-      <li>Making a city a better place to live</li>
-      <li>Improving essential services for people who need them</li>
-      <li>Creating products for the Web that teach things like science, math and art</li>
-      <li>Building tools that help others accomplish those things</li>
+      <li>Keeping the Web open and accessible</li>
+      <li>Protecting privacy</li>
+      <li>Improving public spaces &amp; essential services</li>
+      <li>Creating products for the Web that teach science, math and art</li>
+      <li>Building tools that assist in accomplishing these things</li>
     </ul>
   </div>
+
   
-  
-  <div class="container" id="hello">
+  <div class="container icons" id="hello">
+    <img src="/images/icons/nounproject/lastspark/letter.svg" width="100" height="100" alt="" />
+    <!--
+    <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/island.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/navigation.svg" width="100" height="100" alt="" />
+    -->
 
     <h1>Say hello!</h1>
-    <p>I’m available to help with projects in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
     <p class="action"><a href="mailto:hello@tobbi.co">hello@tobbi.co</a></p>
 
     <section class="social">
@@ -167,19 +189,18 @@ projects:
       </ul>
 
     </section>
-  </div>
-  
-  
-  <div class="container" style="text-align: center;">
-    <img src="/images/icons/nounproject/nookfulloption/clam.svg" width="100" height="100" alt="" />
-    <!-- <img src="/images/icons/nounproject/nookfulloption/coral.svg" width="100" height="100" alt="" /> -->
-    <img src="/images/icons/nounproject/nookfulloption/shell.svg" width="100" height="100" alt="" />
+    <p class="credit">I’m available for projects in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
   </div>
 
-  <div class="container">
+  <div class="container icons">
+    <img src="/images/icons/nounproject/lastspark/island.svg" width="100" height="100" alt="" />
+    <!--
+    <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
+    <img src="/images/icons/nounproject/lastspark/navigation.svg" width="100" height="100" alt="" />
+    -->
     <p class="credit">
-      Icons by <a href="https://thenounproject.com/lastspark/collection/pirates/">lastspark</a> and 
-      <a href="https://thenounproject.com/nookfulloption/collection/sea-set12/">Nook Fulloption</a> from the Noun Project
+      Icons by <a href="https://thenounproject.com/lastspark/collection/pirates/">lastspark</a> from the Noun Project
     </p>
   </div>
 
