Update Grand Park case study

--- a/grand-park.html
+++ b/grand-park.html
@@ -52,6 +52,7 @@ figures:
     <div>
       <h3>Strategy</h3>
       <ul>
+        <li><a href="https://www.linkedin.com/in/kcarrido">Kat Carrido Bonds</a></li>
         <li><a href="https://www.linkedin.com/in/tati-simonian/">Tati Simonian</a></li>
         <li><a href="https://www.4thstreetbridge.com">Duncan Woodbury</a></li>
       </ul>
