--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ projects:
       <li>Keeping the Web open and accessible</li>
       <li>Protecting privacy</li>
       <li>Improving public spaces &amp; essential services</li>
-      <li>Creating products for the Web that teach science, math and art</li>
-      <li>Building tools that assist in accomplishing these things</li>
+      <li>Creating products that teach science, math and art</li>
+      <li>Building tools that assist others in accomplishing these things</li>
     </ul>
   </div>
 
