--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@ projects:
     -->
   </div>
 
-
   <div class="container mission icons">
     <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
     <!--
@@ -153,14 +152,14 @@ projects:
     <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
     <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
     -->
-    <h1>Do you have a mission?</h1>
-    <h2>Here are some ideas I’m especially eager to help with…</h2>
+    <h2 style="margin-top: 0; max-width: 15em; margin-left: auto; margin-right: auto;">I’m especially eager to work on projects with a mission like…</h2>
     <ul>
       <li>Keeping the Web open and accessible</li>
       <li>Protecting privacy</li>
-      <li>Improving public spaces &amp; essential services</li>
-      <li>Creating products that teach science, math and art</li>
-      <li>Building tools that assist others in accomplishing these things</li>
+      <li>Creating community spaces</li>
+      <li>Improving essential services</li>
+      <li>Teaching science, math and art</li>
+      <li>Empowering people to accomplish any of the above</li>
     </ul>
   </div>
 
