--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@ projects:
     <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
     <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
     -->
-    <h2 style="margin-top: 0; max-width: 15em; margin-left: auto; margin-right: auto;">I’m especially eager to work on projects with a mission like…</h2>
+    <h2 style="margin-top: 0;">I love working on projects with a mission like…</h2>
     <ul>
       <li>Keeping the Web open and accessible</li>
       <li>Protecting privacy</li>
-      <li>Creating community spaces</li>
+      <li>Creating spaces for community</li>
       <li>Improving essential services</li>
       <li>Teaching science, math and art</li>
-      <li>Empowering people to accomplish any of the above</li>
+      <li>Making tools that help people accomplish any of the above</li>
     </ul>
   </div>
 
