--- a/food-oasis.html
+++ b/food-oasis.html
@@ -26,13 +26,13 @@ figures:
 
     <p>Food Oasis is a map of healthy food sources in Los Angeles. We built it to make finding healthy, affordable food easier.</p>
 
-    <p>We’re working on the project as part of <a href="http://www.hackforla.org">Hack for LA</a>, the local chapter of <a href="https://www.codeforamerica.org">Code for America</a>, an organization that’s using modern tools and processes like <a href="https://www.codeforamerica.org/practices-1/practices-iterative-development">iterative development</a> to improve government services.</p>
+    <p>We worked on the project as part of <a href="http://www.hackforla.org">Hack for LA</a>, the local chapter of <a href="https://www.codeforamerica.org">Code for America</a>, an organization that’s using modern tools and processes like <a href="https://www.codeforamerica.org/practices-1/practices-iterative-development">iterative development</a> to improve government services.</p>
 
-    <p>We put a data-driven map on the Web, within two weeks of the start of the project. And we’ve been steadily improving it since that time, updating the design, and adding new features—like searching by location and filtering by open hours.</p>
+    <p>We put a data-driven map on the Web, within two weeks of the start of the project. And the team steadily improved it over the next year, updating the design, and adding new features—like searching by location and filtering by open hours.</p>
 
-    <p>I’ve been involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, and providing support for our weekly volunteers—writing <a href="https://github.com/foodoasisla/site/issues">issues</a> for beginners, documenting the code, making improvements to the development environment, pair programming, responding to questions, and reviewing pull requests.</p>
+    <p>I was involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, and providing support for our weekly volunteers—writing <a href="https://github.com/hackforla/food-oasis-la/issues">issues</a> for beginners, documenting the code, making improvements to the development environment, pair programming, responding to questions, and reviewing pull requests.</p>
 
-    <p>My role has also involved importing and managing data with Node.js, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
+    <p>My role also involved importing and managing data with Node.js, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
 
     <h2>Visit the project</h2>
 
