Update LA2050 case study

--- a/la2050.html
+++ b/la2050.html
@@ -27,7 +27,7 @@ figures:
 
   <div class="container">
 
-    <p>The activation challenge is a voting contest held each year to support organizations who are working to improve Los Angeles.</p>
+    <p>The activation challenge is a voting contest held each year to support organizations working to improve Los Angeles.</p>
 
     <p>Our designer, Megan, and I partnered up to create a <a href="https://activation.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
 
