--- a/food-oasis.html
+++ b/food-oasis.html
@@ -28,7 +28,7 @@ figures:
 
     <p>We worked on the project as part of <a href="http://www.hackforla.org">Hack for LA</a>, the local chapter of Code for America, an organization that’s using modern tools and processes like <a href="https://www.codeforamerica.org/practices-1/practices-iterative-development">iterative development</a> to improve government services.</p>
 
-    <p>Within a few weeks of starting the project, we had a working map of healthy food locations. The team steadily improved it over the next year, updating the design, and adding new features—like searching by location and filtering by open hours.</p>
+    <p>Within a few weeks of starting the project, we published a working map of healthy food locations. The team steadily improved it over the next year, updating the design, and adding new features—like searching by location and filtering by open hours.</p>
 
     <p>I was involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, and providing support for our weekly volunteers—writing <a href="https://github.com/hackforla/food-oasis-la/issues">issues</a> for beginners, documenting the code, making improvements to the development environment, pair programming, responding to questions, and reviewing pull requests.</p>
 
