Update GOOD case study

--- a/good.html
+++ b/good.html
@@ -28,7 +28,7 @@ figures:
 
   <div class="container">
 
-    <p>GOOD Worldwide publishes a <a href="https://good.is">magazine</a> that celebrates the positive things people are doing around the world. They also help organizations get the word out about the good they’re doing, by creating original media and facilitating brain-storming sessions with their leadership. GOOD needed a marketing web site to tell their story and show their projects.</p>
+    <p>GOOD Worldwide publishes a <a href="https://good.is">magazine</a> that celebrates the positive things people are doing around the world. They also help organizations get the word out about the good they’re doing, by creating original media and facilitating brain-storming sessions with their leadership. GOOD needed a marketing web site to tell their story and show their past work.</p>
 
     <p>During the project I worked alongside Erica, our designer, to create <a href="https://jimthoburn.github.io/goodinc-ui/design/">responsive prototypes</a> that expressed a content structure and visual look for the new web site. In the process, I documented <a href="https://jimthoburn.github.io/goodinc-ui/build/">reusable elements</a> of code to make it easier to add new pages and features in the future.</p>
 
