Update Food Oasis case study

--- a/food-oasis.html
+++ b/food-oasis.html
@@ -24,7 +24,7 @@ figures:
 
   <div class="container">
 
-    <p>Food Oasis is a map of healthy food sources in Los Angeles. We built it to make finding healthy, affordable food easier.</p>
+    <p>Food Oasis is a map of healthy food sources in Los Angeles. Our team of volunteers built it to make finding healthy, affordable food easier.</p>
 
     <p>We worked on the project as part of <a href="http://www.hackforla.org">Hack for LA</a>, the local chapter of Code for America, an organization that’s using modern tools and processes like <a href="https://www.codeforamerica.org/practices-1/practices-iterative-development">iterative development</a> to improve government services.</p>
 
@@ -88,7 +88,7 @@ figures:
       <figcaption>The Food Oasis team at <a href="http://laincubator.org/la-kretz-innovation-campus/">La Kretz Innovation Campus</a></figcaption>
     </figure>
 
-    <h2>Tools we’re using</h2>
+    <h2>Tools we used</h2>
 
     <div>
       <h3>User Interface</h3>
