Update GOOD case study

--- a/good.html
+++ b/good.html
@@ -42,7 +42,7 @@ figures:
       <li><a href="http://www.goodinc.com">GOOD Worldwide</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/design/">Design prototype</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">UI library</a></li>
-      <li><a href="https://github.com/goodinc/goodinc-ui">GitHub project</a></li>
+      <li><a href="https://github.com/jimthoburn/goodinc-ui">GitHub project</a></li>
     </ul>
 
     {% include figures.html %}
