Add link to tobbi.co project on GitHub

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ projects:
 
       <ul>
         <li><a href="https://github.com/jimthoburn">GitHub</a></li>
-        <li><a href="https://codepen.io/jimthoburn">CodePen</a></li>
+        <li><a href="https://github.com/jimthoburn/tobbi.co">CodePen</a></li>
         <li><a href="https://twitter.com/jimthoburn">Twitter</a></li>
         <li><a href="https://www.linkedin.com/in/jimthoburn">LinkedIn</a></li>
         <!--
@@ -193,15 +193,7 @@ projects:
 
   <div class="container icons">
     <img src="/images/icons/nounproject/lastspark/island.svg" width="100" height="100" alt="" />
-    <!--
-    <img src="/images/icons/nounproject/lastspark/compass.svg" width="100" height="100" alt="" />
-    <img src="/images/icons/nounproject/lastspark/map.svg" width="100" height="100" alt="" />
-    <img src="/images/icons/nounproject/lastspark/navigation.svg" width="100" height="100" alt="" />
-    -->
     <p class="credit">
       Icons by <a href="https://thenounproject.com/lastspark/collection/pirates/">lastspark</a> from the Noun Project
     </p>
   </div>
-
-
-
