--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ projects:
       </ul>
 
     </section>
-    <p class="credit">I’m available for projects in the winter <span class="ampersand">&amp;</span> spring of 2019.</p>
+    <p class="credit">I’m available for projects in the spring <span class="ampersand">&amp;</span> summer of 2019.</p>
   </div>
 
   <div class="container icons">
