--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ projects:
     <section class="social">
 
       <ul>
-        <li><a href="https://github.com/jimthoburn">GitHub</a></li>
-        <li><a href="https://github.com/jimthoburn/tobbi.co">CodePen</a></li>
+        <li><a href="https://github.com/jimthoburn/tobbi.co">GitHub</a></li>
+        <li><a href="https://codepen.io/jimthoburn">CodePen</a></li>
         <li><a href="https://twitter.com/jimthoburn">Twitter</a></li>
         <li><a href="https://www.linkedin.com/in/jimthoburn">LinkedIn</a></li>
         <!--
