Update LA2050 case study

--- a/la2050.html
+++ b/la2050.html
@@ -50,6 +50,7 @@ figures:
       <h3>Design &amp; Illustration</h3>
       <ul>
         <li><a href="https://www.meganmpark.com">Megan Park</a></li>
+        <li><a href="https://www.linkedin.com/in/mana-koike-b67719132/">Mana Koike</a></li>
       </ul>
     </div>
 
