Update offline project URLs to the web archive

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -3,13 +3,13 @@ layout: default
 title: CTZN App
 figures:
 - caption: CTZN promotional web site
-  url: http://getctzn.com
+  url: https://web.archive.org/web/20160820080907/http://getctzn.com
 - caption: Storytelling tools for changemakers
-  url: http://getctzn.com
+  url: https://web.archive.org/web/20160820080907/http://getctzn.com
 - caption: Made for and by communities
-  url: http://getctzn.com
+  url: https://web.archive.org/web/20160820080907/http://getctzn.com
 - caption: Stories, Milk + Bookies
-  url: https://www.ctznapp.com/push/0094EAB8/milk-bookies
+  url: https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/0094EAB8/milk-bookies
 ---
 
 {% include ahoy.html %}
@@ -26,19 +26,19 @@ figures:
 
     <p>CTZN is a social app that encourages volunteers to share stories with each other. We built it to help non-profit organizations grow and get the support they need, by becoming more visible to the public.</p>
 
-    <p>During the project I worked closely with our designer, Aldo, to express feature ideas as web prototypes. From these we created a <a href="https://ctznapp.com/web">web application</a>, a <a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">stories page</a>, and a <a href="http://getctzn.com">promotional web site</a>. We continually reworked these as new features and ideas came about. In the process, I made a <a href="http://goodinc.github.io/ctzn-ui/build/">pattern library</a> so the team could easily find the latest designs and HTML to copy for new features.</p>
+    <p>During the project I worked closely with our designer, Aldo, to express feature ideas as web prototypes. From these we created a <a href="https://web.archive.org/web/20171024014202/https://m.ctznapp.com/web">web application</a>, a <a href="https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/0094EAB8/milk-bookies">stories page</a>, and a <a href="https://web.archive.org/web/20160820080907/http://getctzn.com">promotional web site</a>. We continually reworked these as new features and ideas came about. In the process, I made a <a href="http://goodinc.github.io/ctzn-ui/build/">pattern library</a> so the team could easily find the latest designs and HTML to copy for new features.</p>
 
     <!--
-    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, creating HTML emails, designing responsive layouts for the stories pages, writing production-quality HTML, CSS and JavaScript for the promotional web site, the <a href="https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">channels</a> and the web application, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with client-side and server-side templates. (We used <a href="http://knockoutjs.com">Knockout</a> and Sinatra.)</p>
+    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, creating HTML emails, designing responsive layouts for the stories pages, writing production-quality HTML, CSS and JavaScript for the promotional web site, the <a href="https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">channels</a> and the web application, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with client-side and server-side templates. (We used <a href="http://knockoutjs.com">Knockout</a> and Sinatra.)</p>
     -->
 
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="http://getctzn.com">Promotional site</a></li>
-      <li><a href="https://ctznapp.com">Web application</a></li>
-      <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
-      <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies?channel=1">Live channel</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/http://getctzn.com">Promotional site</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/https://m.ctznapp.com">Web application</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/0094EAB8/milk-bookies?channel=1">Live channel</a></li>
     </ul>
 
     <h2>Behind the scenes</h2>
