--- a/good-fest.html
+++ b/good-fest.html
@@ -3,19 +3,19 @@ layout: default
 title: GOOD Fest
 figures:
 - caption: GOODFest, A livestream festival for good.
-  url: https://goodfest.good.is
+  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is
 - caption: GOODFest, A livestream festival for good.
-  url: https://goodfest.good.is
+  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is
 - caption: GOODFest, A livestream festival for good.
-  url: https://goodfest.good.is
+  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is
 - caption: GOODFest, A livestream festival for good.
-  url: https://goodfest.good.is
+  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is
 - caption: GOODFest, A livestream festival for good.
-  url: https://goodfest.good.is
+  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is
 - caption: GOODFest, A livestream festival for good.
-  url: https://goodfest.good.is
+  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is
 #- caption: GOODFest Video Archive
-#  url: https://goodfest.good.is/featured-video/goodfest
+#  url: https://web.archive.org/web/20160820080907/https://goodfest.good.is/featured-video/goodfest
 ---
 
 {% include ahoy.html %}
@@ -33,19 +33,19 @@ figures:
 
     <p>During the project I worked with our designer, Josh, and our engineer, Brian, to create a responsive microsite with live video streams and information about each of the shows. This project was particularly challenging, since we were still completing the web site while the festival was in progress, and each new feature needed to be timed with the start time of the next show.</p>
 
-    <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <!--<a href="https://goodfest.good.is/featured-video/goodfest">-->video archive of the shows.</p>
+    <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <!--<a href="https://web.archive.org/web/20160820080907/https://goodfest.good.is/featured-video/goodfest">-->video archive of the shows.</p>
 
     <!--
     <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
     -->
 
-    <p>You can <a href="http://www.goodinc.com/project/goodfest">read more about the project</a> on GOOD’s web site.</p>
+    <p>You can <a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/project/goodfest">read more about the project</a> on GOOD’s web site.</p>
 
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://goodfest.good.is">GOOD Fest</a></li>
-      <!--<li><a href="https://goodfest.good.is/featured-video/goodfest">Video Archive</a></li>-->
+      <li><a href="https://web.archive.org/web/20160820080907/https://goodfest.good.is">GOOD Fest</a></li>
+      <!--<li><a href="https://web.archive.org/web/20160820080907/https://goodfest.good.is/featured-video/goodfest">Video Archive</a></li>-->
     </ul>
 
     {% include figures.html %}
@@ -78,14 +78,14 @@ figures:
       <h3>Marketing</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/vandenorth/">Joseph Vandenorth</a></li>
-        <li><a href="http://www.goodinc.com/community/team/kritika_misra">Kritika Misra</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/kritika_misra">Kritika Misra</a></li>
       </ul>
     </div>
 
     <div>
       <h3>Video</h3>
       <ul>
-        <li><a href="http://www.goodinc.com/community/team/gabriel_reilich">Gabriel Reilich</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/gabriel_reilich">Gabriel Reilich</a></li>
         <li><a href="http://www.edwardchoi.com/#/goodfest/">Eddy Choi</a></li>
       </ul>
     </div>
@@ -94,7 +94,7 @@ figures:
       <h3>Production</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/alice-lin-2b544068/">Alice Lin</a></li>
-        <li><a href="http://www.goodinc.com/community/team/grace_kim">Grace Kim</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/grace_kim">Grace Kim</a></li>
         <li><a href="http://laurenturkmusic.com/">Lauren Turk</a></li>
       </ul>
     </div>
@@ -102,8 +102,8 @@ figures:
     <div>
       <h3>Strategy</h3>
       <ul>
-        <li><a href="http://www.goodinc.com/community/team/andy_morris">Andy Morris</a></li>
-        <li><a href="http://www.goodinc.com/community/team/katherine_zeng">Katherine Zeng</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/andy_morris">Andy Morris</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/katherine_zeng">Katherine Zeng</a></li>
         <li><a href="https://www.linkedin.com/in/larsonaubrey">Aubrey Larson</a></li>
       </ul>
     </div>
@@ -112,10 +112,10 @@ figures:
       <h3>Team Coordination</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/joanhanawi">Joan Hanawi</a></li>
-        <li><a href="http://www.goodinc.com/community/team/mindy_nguyen">Mindy Nguyen</a></li>
-        <li><a href="http://www.goodinc.com/community/team/caitlyn_young">Caitlyn Young</a></li>
-        <li><a href="http://www.goodinc.com/community/team/marchela_iahdjian">Marchela Iahdjian</a></li>
-        <li><a href="http://www.goodinc.com/community/team/will_tacy">Will Tacy</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/mindy_nguyen">Mindy Nguyen</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/caitlyn_young">Caitlyn Young</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/marchela_iahdjian">Marchela Iahdjian</a></li>
+        <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/community/team/will_tacy">Will Tacy</a></li>
       </ul>
     </div>
 
