--- a/good.html
+++ b/good.html
@@ -3,13 +3,13 @@ layout: default
 title: GOOD Worldwide
 figures:
 - caption: The Levi Strauss & Co. Collaboratory
-  url: http://www.goodinc.com/project/the_levi_strauss__co_collaboratory_
+  url: https://web.archive.org/web/20160820080907/http://www.goodinc.com/project/the_levi_strauss__co_collaboratory_
 - caption: GOOD Fest
-  url: http://www.goodinc.com/project/goodfest
+  url: https://web.archive.org/web/20160820080907/http://www.goodinc.com/project/goodfest
 - caption: GOOD Blog
-  url: http://www.goodinc.com/news
+  url: https://web.archive.org/web/20160820080907/http://www.goodinc.com/news
 - caption: History of GOOD
-  url: http://www.goodinc.com/about/history
+  url: https://web.archive.org/web/20160820080907/http://www.goodinc.com/about/history
 - caption: Pattern Library
   url: https://jimthoburn.github.io/goodinc-ui/build/
 - caption: Pattern Library
@@ -21,7 +21,7 @@ figures:
   <div class="project-header" style="background-image: url(/images/good/2048-wide/poster.jpg)">
     <div class="project-header__container">
       <h1 class="project-header__title">GOOD Worldwide</h1>
-      <p class="project-header__company">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <p class="project-header__company">with the teams at <a href="http://typecode.com">Type/Code</a> and <a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
     <p class="project-header__credit"><a href="http://www.musiccenter.org">Photo by <span>The Music Center</span></a></p>
   </div>
@@ -39,7 +39,7 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="http://www.goodinc.com">GOOD Worldwide</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com">GOOD Worldwide</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/design/">Design prototype</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">UI library</a></li>
       <li><a href="https://github.com/jimthoburn/goodinc-ui">GitHub project</a></li>
