--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Code & Style for the Web, by Jim Thoburn
 class: home
 projects:
-- name: My LA2050 Activation Challenge
+- name: My LA2050 Challenge
   company: The Goldhirsh Foundation
   url: /la2050
   image: /images/la2050/2048-wide/poster.jpg
@@ -105,7 +105,7 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
         <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
+        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
