--- a/kiva.html
+++ b/kiva.html
@@ -33,7 +33,7 @@ figures:
     <p>Additionally, my role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
     -->
 
-    <p>You can <a href="http://www.goodinc.com/project/the_big_impact_of_small_loans">read more about the project</a> on GOOD’s web site.</p>
+    <p>You can <a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/project/the_big_impact_of_small_loans">read more about the project</a> on GOOD’s web site.</p>
 
     <h2>Visit the project</h2>
 
