--- a/grand-park.html
+++ b/grand-park.html
@@ -3,11 +3,11 @@ layout: default
 title: 4th of July at Grand Park
 figures:
 - caption: Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA
-  url: https://july4.grandparkla.org
+  url: https://2017-july4.grandparkla.org
 - caption: Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA
-  url: https://july4.grandparkla.org
+  url: https://2017-july4.grandparkla.org
 - caption: Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA
-  url: https://july4.grandparkla.org/#event-map
+  url: https://2017-july4.grandparkla.org/#event-map
 ---
 
 {% include ahoy.html %}
@@ -34,8 +34,8 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://july4.grandparkla.org">4th of July at Grand Park</a></li>
-      <li><a href="https://github.com/grandparkla/july4">GitHub project</a></li>
+      <li><a href="https://2017-july4.grandparkla.org">4th of July at Grand Park</a></li>
+      <li><a href="https://github.com/grandparkla/july4/tree/2017">GitHub project</a></li>
     </ul>
 
     {% include figures.html %}
