--- a/la2050.html
+++ b/la2050.html
@@ -3,17 +3,17 @@ layout: default
 title: My LA2050 Challenge
 figures:
 - caption: My LA2050 Challenge
-  url: https://challenge.la2050.org
+  url: https://activation.la2050.org
 - caption: "Welcome, Neighbor: Making LA the most welcoming place in America"
   url: https://activation.la2050.org/connect/mirys-list/
 - caption: Timeline
-  url: https://challenge.la2050.org/timeline/
+  url: https://activation.la2050.org/timeline/
 - caption: My LA2050 Challenge
-  url: https://challenge.la2050.org
+  url: https://activation.la2050.org
 - caption: Vote
-  url: https://challenge.la2050.org
+  url: https://beta-challenge.la2050.org/vote/form/
 - caption: Sign in with your phone
-  url: https://challenge.la2050.org
+  url: https://beta-challenge.la2050.org/vote/form/
 ---
 
 {% include ahoy.html %}
@@ -29,7 +29,7 @@ figures:
 
     <p>The My LA2050 Challenge is a voting contest held each year to support organizations working to improve Los Angeles.</p>
 
-    <p>Our designer, Megan, and I partnered up to create a <a href="https://challenge.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
+    <p>Our designer, Megan, and I partnered up to create a <a href="https://activation.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
 
     <p>We were expecting potentially thousands of voters at a time, so we built a <a href="https://jekyllrb.com">static web site</a> that can be served with high availability, performance and security. Content management, user submissions <span class="ampersand">&amp;</span> accounts were provided by <a href="#tools">third-party services</a>.</p>
 
