--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ projects:
       </ul>
 
     </section>
-    <p class="credit">I’m available for projects in the summer <span class="ampersand">&amp;</span> fall of 2019.</p>
+    <p class="credit">I’m available for projects in the <span class="phrase">fall <span class="ampersand">&amp;</span> winter of 2019.</span></p>
   </div>
 
   <div class="container icons">
