Show more projects on the home page

--- a/good-fest.html
+++ b/good-fest.html
@@ -44,7 +44,7 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://web.archive.org/web/20160820080907/https://goodfest.good.is">GOOD Fest</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/https://goodfest.good.is">GOOD Fest, <small>on archive.org</small></a></li>
       <!--<li><a href="https://web.archive.org/web/20160820080907/https://goodfest.good.is/featured-video/goodfest">Video Archive</a></li>-->
     </ul>
 
