--- a/good.html
+++ b/good.html
@@ -39,7 +39,7 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://web.archive.org/web/20161202223513/http://www.goodinc.com">GOOD Worldwide</a></li>
+      <li><a href="https://web.archive.org/web/20161202223513/http://www.goodinc.com">GOOD Worldwide, <small>on archive.org</small></a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/design/">Design prototype</a></li>
       <li><a href="https://jimthoburn.github.io/goodinc-ui/build/">UI library</a></li>
       <li><a href="https://github.com/jimthoburn/goodinc-ui">GitHub project</a></li>
