--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@ projects:
   url: /ctzn-app
   image: /images/ctzn-app/2048-wide/poster.jpg
   image_style: "background-position: 50% 25%;"
-# - name: GOOD Community
-  # url: /good-community
-  # image: /images/good-community/2048-wide/poster-b.jpg
-  # image_style: "background-position: bottom;"
-# - name: OK the Store
-  # company: <span class="phrase">Barrel Strength Design</span>
-  # url: /ok-the-store
-  # image: /images/ok-the-store/2048-wide/poster-a.jpg
-# - name: JJ Burns &amp; Company
-  # company: <span class="phrase">Fahrenheit Studio</span>
-  # url: /jj-burns
-  # image: /images/jj-burns/2048-wide/poster-a.jpg
-  # image_style: "background-position: 2% 50%;"
-# - name: Fahrenheit Studio
-  # url: /fahrenheit
-  # image: /images/fahrenheit/2048-wide/poster-a.jpg
+- name: GOOD Community
+  url: /good-community
+  image: /images/good-community/2048-wide/poster-b.jpg
+  image_style: "background-position: bottom;"
+- name: OK the Store
+  company: <span class="phrase">Barrel Strength Design</span>
+  url: /ok-the-store
+  image: /images/ok-the-store/2048-wide/poster-a.jpg
+- name: JJ Burns &amp; Company
+  company: <span class="phrase">Fahrenheit Studio</span>
+  url: /jj-burns
+  image: /images/jj-burns/2048-wide/poster-a.jpg
+  image_style: "background-position: 2% 50%;"
+- name: Fahrenheit Studio
+  url: /fahrenheit
+  image: /images/fahrenheit/2048-wide/poster-a.jpg
 ---
 
   <div class="container introduction">
