--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -35,7 +35,7 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://web.archive.org/web/20160820080907/http://getctzn.com">Promotional site</a></li>
+      <li><a href="https://web.archive.org/web/20160820080907/http://getctzn.com">Promotional site, <small>on archive.org</small></a></li>
       <li><a href="https://web.archive.org/web/20160820080907/https://m.ctznapp.com/web">Web application</a></li>
       <li><a href="https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/0094EAB8/milk-bookies">Stories page</a></li>
       <li><a href="https://web.archive.org/web/20160820080907/https://www.ctznapp.com/push/0094EAB8/milk-bookies?channel=1">Live channel</a></li>
