Update service examples

--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
         <h2>Prototypes</h2>
-        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">See an example</a></p>
+        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://goodinc.github.io/citizen-ui/html/prototype/" aria-label="example prototype">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
         <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="https://web.archive.org/web/20160820080907/http://www.goodinc.com/project/togetherthere_" aria-label="example user interface">See an example</a></p>
+        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="https://activation.la2050.org/" aria-label="example user interface">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
         <h2>Pattern libraries</h2>
-        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
+        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://goodinc.github.io/citizen-ui/html/patterns/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/ship-forward.svg" width="100" height="100" alt="" />
