Update example pattern library

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
         <h2>Pattern libraries</h2>
-        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://goodinc.github.io/citizen-ui/html/patterns/" aria-label="example pattern library">See an example</a></p>
+        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/ship-forward.svg" width="100" height="100" alt="" />
