--- a/index.html
+++ b/index.html
@@ -7,48 +7,48 @@ projects:
   company: The Goldhirsh Foundation
   url: /la2050
   image: /images/la2050/2048-wide/poster.jpg
-- name: GOOD Fest
-  company: Google &amp; GOOD Worldwide
-  url: /good-fest
-  image: /images/good-fest/2048-wide/poster-b.jpg
-  image_style: "background-position: bottom;"
+# - name: GOOD Fest
+#   company: Google &amp; GOOD Worldwide
+#   url: /good-fest
+#   image: /images/good-fest/2048-wide/poster-b.jpg
+#   image_style: "background-position: bottom;"
 - name: 4th of July <span class="phrase">at Grand Park</span>
   company: The Music Center
   url: /grand-park
   image: /images/grand-park/2048-wide/poster-a.jpg
-- name: 10 Days of Lending
-  company: PayPal, Kiva, &amp; GOOD Worldwide
-  url: /kiva
-  image: /images/kiva/2048-wide/poster-c.jpg
-- name: GOOD Worldwide
-  company: Type/Code
-  url: /good
-  image: /images/good/2048-wide/poster.jpg
+# - name: 10 Days of Lending
+#   company: PayPal, Kiva, &amp; GOOD Worldwide
+#   url: /kiva
+#   image: /images/kiva/2048-wide/poster-c.jpg
+# - name: GOOD Worldwide
+#   company: Type/Code
+#   url: /good
+#   image: /images/good/2048-wide/poster.jpg
 - name: Food Oasis <span class="phrase">Los Angeles</span>
   company: <span class="phrase">Code for America</span>
   url: /food-oasis
   image: /images/food-oasis/2048-wide/poster-a.jpg
-- name: CTZN App
-  company: GOOD Worldwide
-  url: /ctzn-app
-  image: /images/ctzn-app/2048-wide/poster.jpg
-  image_style: "background-position: 50% 25%;"
-- name: GOOD Community
-  url: /good-community
-  image: /images/good-community/2048-wide/poster-b.jpg
-  image_style: "background-position: bottom;"
-- name: OK the Store
-  company: <span class="phrase">Barrel Strength Design</span>
-  url: /ok-the-store
-  image: /images/ok-the-store/2048-wide/poster-a.jpg
-- name: JJ Burns &amp; Company
-  company: <span class="phrase">Fahrenheit Studio</span>
-  url: /jj-burns
-  image: /images/jj-burns/2048-wide/poster-a.jpg
-  image_style: "background-position: 2% 50%;"
-- name: Fahrenheit Studio
-  url: /fahrenheit
-  image: /images/fahrenheit/2048-wide/poster-a.jpg
+# - name: CTZN App
+#   company: GOOD Worldwide
+#   url: /ctzn-app
+#   image: /images/ctzn-app/2048-wide/poster.jpg
+#   image_style: "background-position: 50% 25%;"
+# - name: GOOD Community
+#   url: /good-community
+#   image: /images/good-community/2048-wide/poster-b.jpg
+#   image_style: "background-position: bottom;"
+# - name: OK the Store
+#   company: <span class="phrase">Barrel Strength Design</span>
+#   url: /ok-the-store
+#   image: /images/ok-the-store/2048-wide/poster-a.jpg
+# - name: JJ Burns &amp; Company
+#   company: <span class="phrase">Fahrenheit Studio</span>
+#   url: /jj-burns
+#   image: /images/jj-burns/2048-wide/poster-a.jpg
+#   image_style: "background-position: 2% 50%;"
+# - name: Fahrenheit Studio
+#   url: /fahrenheit
+#   image: /images/fahrenheit/2048-wide/poster-a.jpg
 ---
 
   <div class="container introduction">
@@ -100,7 +100,7 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
         <h2>Prototypes</h2>
-        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://goodinc.github.io/citizen-ui/html/prototype/" aria-label="example prototype">See an example</a></p>
+        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
