--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ projects:
       </ul>
 
     </section>
-    <p class="credit">I’m available for projects in the <span class="phrase">fall <span class="ampersand">&amp;</span> winter of 2019.</span></p>
+    <p class="credit">I’m available for projects in the <span class="phrase">winter of 2019 <span class="ampersand">&amp;</span> 2020.</span></p>
   </div>
 
   <div class="container icons">
