Add links to Dev and Stack Overflow

--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@ projects:
       <ul>
         <li><a href="https://github.com/jimthoburn/tobbi.co">GitHub</a></li>
         <li><a href="https://codepen.io/jimthoburn">CodePen</a></li>
+        <li><a href="https://dev.to/jimthoburn">Dev</a></li>
         <li><a href="https://glitch.com/@jimthoburn">Glitch</a></li>
+        <li><a href="https://stackoverflow.com/users/903452/jim">Stack Overflow</a></li>
         <li><a href="https://twitter.com/jimthoburn">Twitter</a></li>
         <li><a href="https://www.linkedin.com/in/jimthoburn">LinkedIn</a></li>
       </ul>
