--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@ projects:
   </div>
 
   <div class="container icons">
+    <img src="/images/icons/nounproject/lastspark/letter.svg" width="100" height="100" alt="" />
+    <h1>Writing</h1>
+  </div>
+  
+  <ul class="project-list">
+    {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}"
+        style="background-image: url({{ post.image }}); {{ post.image_style }}"
+        class="project-list-item">
+        <div class="project-list-item__container">
+          <h3 class="project-list-item__title" style="max-width: 13em">{{ post.title }}</h3>
+          <p class="project-list-item__company">Posted on {{ post.date | date: "%B %-d, %Y" }}</p>
+        </div>
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+
+  <div class="container icons">
     <img src="/images/icons/nounproject/lastspark/lighthouse.svg" width="100" height="100" alt="" />
     <h1>Example projects</h1>
   </div>
