--- a/good-community.html
+++ b/good-community.html
@@ -27,7 +27,7 @@ figures:
 
   <div class="container">
 
-    <p>The GOOD Community web site, along with <a href="http://good.is">GOOD Magazine</a>, celebrates individuals and organizations who are working for postive change in the world. The beautiful desktop-oriented site needed a responsive redesign.</p>
+    <p>The GOOD Community web site, along with <a href="http://good.is">GOOD Magazine</a>, celebrates individuals and organizations who are working for positive change in the world. The beautiful desktop-oriented site needed a responsive redesign.</p>
 
     <p>During the project, I worked closely with our designer, Aldo, to create <a href="http://goodinc.github.io/citizen-ui/html/prototype/">web prototypes</a> which demonstrated how the new site would look at different screen sizes. We continually improved these while testing with users.</p>
 
