--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ projects:
       </ul>
 
     </section>
-    <p class="credit">I’m available for projects in the <span class="phrase">winter of 2019 <span class="ampersand">&amp;</span> 2020.</span></p>
+    <p class="credit">I’m available for projects in the <span class="phrase">winter <span class="ampersand">&amp;</span> spring of 2020.</span></p>
   </div>
 
   <div class="container icons">
